fixed horizontal-divider visibility on mobile view

--- a/style.css
+++ b/style.css
@@ -100,9 +100,13 @@ body {
     margin-left: 8px !important;
   }
 
-  .about-contents .horizontal-divider:nth-child(1),
+  .about-contents .horizontal-divider,
   .about-contents .section-label {
     display: none !important;
+  }
+
+  .about-middle-contents .horizontal-divider {
+    display: block !important;
   }
 
   .about-top-contents {
